k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cnai-llm-sizer-service
spec:
  type: ClusterIP
  selector:
    app: cnai-llm-sizer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
